--- a/style.css
+++ b/style.css
@@ -95,22 +95,6 @@ p {
     color: #5454D4;
 }
 
-.svg3 {
-    position: absolute;
-    width: 63.05px;
-    height: 18.58px;
-    left: 40vw;
-    top: 600px;
-}
-
-.svg4 {
-    position: absolute;
-    width: 63.05px;
-    height: 18.58px;
-    left: 80vw;
-    top: 600px;
-}
-
 .gradient {
     position: absolute;
     width: 309.94px;
@@ -128,10 +112,6 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.left-start-screen {
-    /* width: 50%; */
 }
 
 .right-start-screen {
@@ -265,20 +245,21 @@ iframe {
     text-align: center;
 }
 
-.card > img {
+.card>img {
     width: 45.79px;
     width: 45.79px;
-    height: 45.79px;  
+    height: 45.79px;
 }
 
 .contact-information {
     display: flex;
     justify-content: space-between;
     background: rgba(30, 30, 32, 0.5);
-    height: 335.83px;
+    padding: 70px 0px 70px 0px;
+    /* height: 335.83px; */
 }
 
-.contact-information h2 {
+.contact-heading h2 {
     max-width: 548px;
     font-family: 'Graphik';
     font-weight: 700;
@@ -288,10 +269,93 @@ iframe {
     align-items: center;
 }
 
-.contact-information>div {
+.contact-heading {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.hystmodal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    /* см. ниже */
+    align-items: center;
+    z-index: 99;
+    /* Чтобы окно не прилипало к границе
+    браузера установим отступы */
+    padding: 30px 0;
+}
+
+.hystmodal__wrap {
+    flex-shrink: 0;
+    flex-grow: 0;
+    width: 100%;
+    min-height: 100%;
+    margin: auto;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.hystmodal__window {
+    margin: 50px 0;
+    flex-shrink: 0;
+    flex-grow: 0;
+    background: #fff;
+    max-width: 100%;
+    overflow: visible;
+    transition: transform 0.2s ease 0s, opacity 0.2s ease 0s;
+    transform: scale(0.9);
+    display: flex;
+    flex-direction: column;
+    background-color: #19191B;
+    border: #FFFFFF 1px solid;
+    border-radius: 20px;
+    position: fixed;
+    align-items: center;
+}
+
+.close-button {
+    width: 100%;
+    padding: 50px 0px 50px 0px;
+    border-radius: 0px 0px 20px 20px;
+    font-size: 20px;
+}
+
+.hystmodal__window h2 {
+    text-align: center;
+    font-family: 'Graphik';
+    font-size: 39.8214px;
+    line-height: 46px;
+    margin-bottom: 30px;
+}
+
+.hystmodal__windowp p {
+    font-family: 'Nunito Sans';
+    font-weight: 400;
+    font-size: 13.2738px;
+    line-height: 19px;
+    letter-spacing: -0.331985px;
+    width: 198.44px;
+    text-align: center;
+}
+
+.hystmodal-info {
+    padding: 25px;
+}
+
+.hystmodal-info>p:last-child {
+    padding-bottom: 200px;
 }
 
 .footer-section {
@@ -306,52 +370,44 @@ iframe {
     margin: 0;
 }
 
-.slider-section h2 {
-    font-family: 'Nunito Sans';
-    font-weight: 800;
-    font-size: 38.494px;
-    line-height: 53px;
-}
 
-
-.slider-item {
-    display: flex;
-    justify-content: space-between;
+.swiper {
+    width: 75vw;
+    height: 100%;
     margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
-.slider-item>img {
-    height: 300.77px;
-    
-}
-
-
-.example-work2 {
-    padding-top: 65px;
-}
-
-.example-work3 {
-    padding-top: 140px;
-}
-
-.slider-buttons-container {
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    width: 30%;
+    height: 30%;
+    margin-bottom: 40px;
+}
+
+.swiper-slide img:nth-child(2) {
     margin-top: 70px;
-    margin-bottom: 111px;
 }
 
-.slider-button:nth-child(2) {
-
-    margin: 0px 10px 0px 10px;
-}
-
-.slider-button {
-    width: 15px;
-    height: 15px;
-    background: #121213;
-    border-radius: 10px;
-    cursor: pointer;
+.swiper-slide img:nth-child(3) {
+    margin-top: 140px;
 }
 
 .active {
@@ -529,15 +585,32 @@ iframe {
         flex-direction: column;
         align-items: center;
     }
+
     .start-screen, .top-video-section {
         flex-direction: column;
         align-items: baseline;
     }
-    .contact-information>div {
+
+    .contact-heading {
         flex-direction: column;
         align-items: baseline;
         justify-content: space-around;
     }
+
+    .swiper-slide img {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 40px;
+    }
+
+    .swiper-slide img:nth-child(2) {
+        display: none;
+    }
+
+    .swiper-slide img:nth-child(3) {
+        display: none;
+    }
+
 }
 
 
@@ -549,9 +622,11 @@ iframe {
     .video-section::after, .card-block::before, .left-start-screen::before, .right-start-screen::after, .right-start-screen::before, .left-start-screen>p::before, .left-start-screen>h1::before {
         display: none;
     }
+
     .center {
         width: 90vw;
     }
+
     .client-img {
         display: flex;
         justify-content: space-evenly;
