--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ p {
     width: 104.2px;
     height: 29.2px;
     cursor: pointer;
+    z-index: 98;
 }
 
 .contact-button:hover {
@@ -254,6 +255,12 @@ iframe {
     width: 45.79px;
     width: 45.79px;
     height: 45.79px;
+    opacity: 0.7;
+}
+
+.card>img:hover {
+
+    opacity: 1;
 }
 
 .contact-information {
@@ -407,6 +414,13 @@ iframe {
     margin-bottom: 40px;
 }
 
+.swiper-slide img:hover {
+    animation-duration: 1s;
+    animation-name: zoom;
+    width: 32%;
+    height: 32%;
+}
+
 .swiper-slide img:nth-child(2) {
     margin-top: 70px;
 }
@@ -543,6 +557,19 @@ iframe {
         border-radius: 10.6369px;
     }
 }
+
+@keyframes zoom {
+    from {
+        width: 30%;
+        height: 30%;
+    }
+
+    to {
+        width: 32%;
+        height: 32%;
+    }
+}
+
 
 /* fonts */
 @font-face {
