--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ p {
 .logo {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .logo-text {
@@ -66,6 +67,7 @@ p {
     width: 104.2px;
     height: 29.2px;
     cursor: pointer;
+    z-index: 98;
 }
 
 .contact-button:hover {
@@ -94,22 +96,6 @@ p {
     color: #5454D4;
 }
 
-.svg3 {
-    position: absolute;
-    width: 63.05px;
-    height: 18.58px;
-    left: 40vw;
-    top: 600px;
-}
-
-.svg4 {
-    position: absolute;
-    width: 63.05px;
-    height: 18.58px;
-    left: 80vw;
-    top: 600px;
-}
-
 .gradient {
     position: absolute;
     width: 309.94px;
@@ -127,10 +113,6 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.left-start-screen {
-    width: 50%;
 }
 
 .right-start-screen {
@@ -229,6 +211,11 @@ iframe {
     margin-bottom: 30px;
 }
 
+
+.suggestions-section {
+    margin-top: 100px;
+}
+
 .card-line {
     display: flex;
     justify-content: space-around;
@@ -264,14 +251,27 @@ iframe {
     text-align: center;
 }
 
+.card>img {
+    width: 45.79px;
+    width: 45.79px;
+    height: 45.79px;
+    opacity: 0.7;
+}
+
+.card>img:hover {
+
+    opacity: 1;
+}
+
 .contact-information {
     display: flex;
     justify-content: space-between;
     background: rgba(30, 30, 32, 0.5);
-    height: 335.83px;
+    padding: 70px 0px 70px 0px;
+    /* height: 335.83px; */
 }
 
-.contact-information h2 {
+.contact-heading h2 {
     max-width: 548px;
     font-family: 'Graphik';
     font-weight: 700;
@@ -281,10 +281,101 @@ iframe {
     align-items: center;
 }
 
-.contact-information>div {
+.contact-heading {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.hystmodal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    /* см. ниже */
+    align-items: center;
+    z-index: 99;
+    /* Чтобы окно не прилипало к границе
+    браузера установим отступы */
+    padding: 30px 0;
+}
+
+.hystmodal__wrap {
+    flex-shrink: 0;
+    flex-grow: 0;
+    width: 100%;
+    min-height: 100%;
+    margin: auto;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.hystmodal__window {
+    margin: 50px 0;
+    flex-shrink: 0;
+    flex-grow: 0;
+    background: #fff;
+    max-width: 100%;
+    overflow: visible;
+    transition: transform 0.2s ease 0s, opacity 0.2s ease 0s;
+    transform: scale(0.9);
+    display: flex;
+    flex-direction: column;
+    background-color: #19191B;
+    border: #FFFFFF 1px solid;
+    border-radius: 20px;
+    position: fixed;
+    align-items: center;
+}
+
+.close-button {
+    width: 100%;
+    padding: 50px 0px 50px 0px;
+    border-radius: 0px 0px 20px 20px;
+    font-size: 20px;
+}
+
+.close-button > img {
+    width: 5%;
+}
+
+.hystmodal__window h2 {
+    text-align: center;
+    font-family: 'Graphik';
+    font-size: 39.8214px;
+    line-height: 46px;
+    margin-bottom: 30px;
+}
+
+.hystmodal__windowp p {
+    font-family: 'Nunito Sans';
+    font-weight: 400;
+    font-size: 13.2738px;
+    line-height: 19px;
+    letter-spacing: -0.331985px;
+    width: 198.44px;
+    text-align: center;
+}
+
+.hystmodal-info {
+    padding: 25px 60px 25px 60px;
+}
+
+.hystmodal-info>p:last-child {
+    padding-bottom: 200px;
+}
+
+.hystmodal-info>input {
+    width: 100%;
 }
 
 .footer-section {
@@ -299,51 +390,60 @@ iframe {
     margin: 0;
 }
 
-.slider-section h2 {
+
+.swiper {
+    width: 75vw;
+    height: 100%;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.swiper>h2 {
     font-family: 'Nunito Sans';
+    font-style: normal;
     font-weight: 800;
     font-size: 38.494px;
     line-height: 53px;
+    margin-bottom: 0;
 }
 
-
-.slider-item {
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: space-between;
-    margin: 0 auto;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
 }
 
-.slider-item>img {
-    height: 300.77px;
+.swiper-slide img {
+    width: 30%;
+    height: 30%;
+    margin-bottom: 40px;
 }
 
-
-.example-work2 {
-    padding-top: 65px;
+.swiper-slide img:hover {
+    animation-duration: 1s;
+    animation-name: zoom;
+    width: 32%;
+    height: 32%;
 }
 
-.example-work3 {
-    padding-top: 140px;
-}
-
-.slider-buttons-container {
-    display: flex;
-    justify-content: center;
+.swiper-slide img:nth-child(2) {
     margin-top: 70px;
-    margin-bottom: 111px;
 }
 
-.slider-button:nth-child(2) {
-
-    margin: 0px 10px 0px 10px;
-}
-
-.slider-button {
-    width: 15px;
-    height: 15px;
-    background: #121213;
-    border-radius: 10px;
-    cursor: pointer;
+.swiper-slide img:nth-child(3) {
+    margin-top: 140px;
 }
 
 .active {
@@ -368,14 +468,22 @@ iframe {
     clip: rect(0 0 0 0);
 }
 
+.parsley-errors-list{
+    color: red;
+    font-family: 'Nunito Sans';
+    font-weight: 400;
+    width: 243px;
+    word-wrap: normal;
+}
+
 
 /* Decoration */
 .left-start-screen>h1::before {
     content: "";
     background-image: url('img/vector1.svg');
     position: absolute;
-    width: 70.05px;
-    height: 36.58px;
+    width: 68.05px;
+    height: 21.58px;
     left: 45vw;
     top: 250.31px;
     z-index: -1;
@@ -386,7 +494,7 @@ iframe {
     background-image: url('img/vector2.svg');
     position: absolute;
     width: 70.05px;
-    height: 80.58px;
+    height: 70.58px;
     left: 40vw;
     top: 620.31px;
     z-index: -1;
@@ -396,8 +504,8 @@ iframe {
     content: "";
     background-image: url('img/vector3.svg');
     position: absolute;
-    width: 70.05px;
-    height: 80.58px;
+    width: 50.05px;
+    height: 59px;
     left: 80vw;
     top: 300px;
     z-index: -1;
@@ -475,6 +583,19 @@ iframe {
     }
 }
 
+@keyframes zoom {
+    from {
+        width: 30%;
+        height: 30%;
+    }
+
+    to {
+        width: 32%;
+        height: 32%;
+    }
+}
+
+
 /* fonts */
 @font-face {
     font-family: "Montserrat";
@@ -519,16 +640,57 @@ iframe {
 
     .main-header {
         flex-direction: column;
+        align-items: center;
+    }
+
+    .start-screen, .top-video-section {
+        flex-direction: column;
+        align-items: baseline;
+    }
+
+    .contact-heading {
+        flex-direction: column;
+        align-items: baseline;
+        justify-content: space-around;
+    }
+
+    .swiper-slide img {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 40px;
+        animation-name: none;
+    }
+
+    .swiper-slide img:hover {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 40px;
+        animation-name: none;
+    }
+
+    .swiper-slide img:nth-child(2) {
+        display: none;
+    }
+
+    .swiper-slide img:nth-child(3) {
+        display: none;
+    }
+
+    .card-line:last-child {
+        margin-top: 0;
+    }
+
+    .card {
+        margin: 40px 0 40px 0px;
+    }
+
+    .right-start-screen {
+        width: 100%;
     }
 }
 
-
 @media screen and (max-width: 1380px) {
     .work-example {
-        flex-direction: column;
-    }
-
-    .start-screen {
         flex-direction: column;
     }
 
@@ -536,6 +698,20 @@ iframe {
         display: none;
     }
 
+    .center {
+        width: 90vw;
+    }
 
+    .client-img {
+        display: flex;
+        justify-content: space-evenly;
+    }
 
+    .swiper>h2 {
+        margin-bottom: 30px;
+    }
+
+    .swiper-slide img:hover {
+        animation-name: none;
+    }
 }
