--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+/* fonts */
+@font-face {
+    font-family: "Montserrat";
+    src: url("fonts/Montserrat.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Nunito Sans";
+    src: url("fonts/NunitoSans.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "Graphik";
+    src: url("fonts/GraphikBold.otf") format("truetype");
+    font-style: bold;
+    font-weight: 700;
+}
+
+/* styles */
 body {
     background-color: #19191B;
 }
@@ -6,7 +29,7 @@ a, h1, h2, h3, h4, h5, h6 {
     color: #FFFFFF;
 }
 
-p {
+p, label {
     color: rgba(255, 255, 255, 0.7);
     font-family: 'Nunito Sans';
     font-style: normal;
@@ -56,7 +79,7 @@ p {
     line-height: 14px;
     text-align: center;
     letter-spacing: -0.331985px;
-    background-color: #19191B;
+    background-color: transparent;
     color: #FFFFFF;
     border-radius: 3.31845px;
     border: 0.66369px solid #FFFFFF;
@@ -356,7 +379,7 @@ iframe {
     margin-bottom: 30px;
 }
 
-.hystmodal__windowp p {
+.hystmodal__windowp label {
     font-family: 'Nunito Sans';
     font-weight: 400;
     font-size: 13.2738px;
@@ -368,14 +391,12 @@ iframe {
 
 .hystmodal-info {
     padding: 25px 60px 25px 60px;
+    display: flex;
+    flex-direction: column;
 }
 
-.hystmodal-info>p:last-child {
+.hystmodal-info>label:last-child {
     padding-bottom: 200px;
-}
-
-.hystmodal-info>input {
-    width: 100%;
 }
 
 .footer-section {
@@ -593,29 +614,6 @@ iframe {
         width: 32%;
         height: 32%;
     }
-}
-
-
-/* fonts */
-@font-face {
-    font-family: "Montserrat";
-    src: url("fonts/Montserrat.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: "Nunito Sans";
-    src: url("fonts/NunitoSans.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: "Graphik";
-    src: url("fonts/GraphikBold.otf") format("truetype");
-    font-style: bold;
-    font-weight: 700;
 }
 
 /* media */
